added basic html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>Document</title>
+    <title>Kudos Hub</title>
 </head>
 <body>
+    <!-- top part of the screen -->
+    <img src="../" alt="">
+    <h1>Kudos Hub</h1>
+    <textarea id="textarea" placeholder="Write your endorsement here"></textarea>
+    <button id="publish-btn">Publish</button>
+    <!-- posted endorsements area -->
+    <h2 id="endorsements-title">Endorsements</h2>
+    <div id="endorsements-list">
+        <p class="endorsement">Great job!</p>
+        <p class="endorsement">Fantastic!</p>
+        <p class="endorsement">Spectacular!</p>
+    </div>
     <script src="./script.js" type="module"></script>
 </body>
 </html>
