added the from and to textareas

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         </div>
         <div id="text-publish-area">
             <textarea id="textarea" placeholder="Write your endorsement here"></textarea>
+            <div id="from-to-container">
+                <textarea class="textarea-from-to" placeholder="from"></textarea>
+                <textarea class="textarea-from-to" placeholder="to"></textarea>
+            </div>
             <button id="publish-btn">Publish</button>
         </div>
         <!-- posted endorsements area -->
